--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tailadmin-react-free",
   "private": true,
   "version": "1.0.5",
+  "homepage": "/siram-workstation",
   "type": "module",
   "scripts": {
     "dev": "vite",
