--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-player": "^2.12.0",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
     "sort-by": "^0.0.2",
+    "websocket": "^1.0.34",
     "windmill": "^0.1.3"
   },
   "devDependencies": {
