--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apexcharts": "^3.41.0",
     "axios": "^1.5.0",
     "boostrap": "^2.0.0",
+    "google-maps-react": "^2.0.6",
     "headlessui": "^0.0.0",
     "jsvectormap": "^1.5.3",
     "localforage": "^1.10.0",
