--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.7",
     "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.2",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.9.0",
     "websocket": "^1.0.34",
