--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.5.0",
     "boostrap": "^2.0.0",
     "dayjs": "^1.11.10",
+    "driver.js": "^1.3.1",
     "google-maps-react": "^2.0.6",
     "headlessui": "^0.0.0",
     "jsvectormap": "^1.5.3",
