--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-select": "^5.7.7",
     "react-time-picker": "^6.6.0",
     "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.26.3",
     "socket.io-client": "^4.7.2",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.9.0",
